fabric/1.18.2/scaffold/README_AI.md
# Fabric 1.18.2 模组项目骨架说明

> 本文件供 AI 编程助手阅读，描述每个文件的职责、修改注意事项和扩展位置。
> 当 AI 开始一个新的 Fabric 1.18.2 项目时，先读本文件。

---

## 文件清单与职责

```
fabric-mod/
├── build.gradle              # Gradle 构建配置，定义依赖和 Loom 配置
├── settings.gradle           # 项目名称
├── gradle.properties        # 版本号集中管理（优先修改这里）
├── .gitignore               # Git 忽略配置
│
└── src/main/
    ├── java/com/example/examplemod/
    │   ├── ExampleMod.java      # 主入口（implements ModInitializer）
    │   ├── ExampleModClient.java # 客户端入口（implements ClientModInitializer）
    │   ├── ExampleAnimalEntity.java # 示例实体类
    │   └── mixin/             # Mixin 类
    │       ├── ExampleMixin.java
    │       └── client/ExampleMixin.java
    │
    └── resources/
        ├── fabric.mod.json     # Fabric 元数据（modId / 版本 / 依赖声明）
        ├── pack.mcmeta        # 资源包标识
        ├── examplemod.mixins.json # Mixin 配置
        └── assets/examplemod/  # 资源文件（textures、models 等）
```

---

## 优先修改：`gradle.properties`

所有**依赖/映射/loader/mod** 版本号集中在此文件，禁止在 `build.gradle` 中硬编码；唯一例外是 Gradle **插件**版本（`fabric-loom` 等），插件块按 Gradle 惯例必须内联，不算违规：

```properties
minecraft_version=1.18.2
yarn_mappings=1.18.2+build.4
loader_version=0.14.24
fabric_api_version=0.77.0+1.18.2

mod_id=examplemod          # 全小写；Fabric 允许 `_` 与 `-`（官方示例 example-mod），Forge 系才禁止 `-`
mod_name=Example Mod
mod_version=1.0.0
mod_group_id=com.example.examplemod   # Java 包名前缀
mod_authors=YourNameHere
mod_description=An example Fabric mod.
mod_license=MIT
```

> **AI 注意**：修改 `mod_id` 后，必须同步修改 `fabric.mod.json`、`ExampleMod.java` 中的 `MOD_ID` 常量和所有 `Identifier` 注册名。

---

## 扩展骨架：添加新内容

### 添加新方块

在 `ExampleMod.java` 中添加：

```java
// 静态字段
private static final Block MY_BLOCK =
    Registry.register(
        Registry.BLOCK,
        new Identifier(MOD_ID, "my_block"),
        new Block(FabricBlockSettings.copyOf(Blocks.STONE).strength(1.5f))
    );

// 同名 BlockItem
private static final Item MY_BLOCK_ITEM =
    Registry.register(
        Registry.ITEM,
        new Identifier(MOD_ID, "my_block"),  // 必须同名！
        new BlockItem(MY_BLOCK, new Item.Settings().group(ItemGroup.BUILDING_BLOCKS))
    );
```

### 添加新物品

```java
private static final Item MY_ITEM =
    Registry.register(
        Registry.ITEM,
        new Identifier(MOD_ID, "my_item"),
        new Item(new Item.Settings().group(ItemGroup.MISC).maxCount(64))
    );
```

### 添加自定义实体

```java
public class MyEntity extends AnimalEntity {
    // ...
}

// 在静态字段中注册
public static final EntityType<MyEntity> MY_ENTITY =
    Registry.register(
        Registry.ENTITY_TYPE,
        new Identifier(MOD_ID, "my_entity"),
        EntityType.Builder.create(MyEntity::new, SpawnGroup.CREATURE)
            .setDimensions(0.9f, 1.4f)
            .build("my_entity")
    );
```

---

## 关键规则

### 禁止在 onInitialize() 外注册

```java
// ✅ 正确：在 onInitialize() 执行时，所有静态注册已经完成
@Override
public void onInitialize() {
    LOGGER.info("Mod initialized");
}

// ❌ 错误：不应该在 onInitialize() 中手动调用注册
// Registry.register() 在类加载时已执行，不需要再次调用
```

### mod ID 里的 `-`：Fabric 允许，Forge 系禁止

```properties
# ✅ Fabric / Quilt 允许连字符（官方示例即 example-mod）
mod_id=example-mod

# ✅ 也允许下划线
mod_id=example_mod

# ❌ 真正的禁令：mod_id 与 fabric.mod.json 的 "id"、MOD_ID 常量、资源路径不一致
```

> 只有 Forge / NeoForge / LiteLoader / Rift / ModLoader 才禁止 `-`（那些平台须用 `_`）。本 scaffold 默认值写 `examplemod`（无分隔符），两种分隔符在 Fabric 下都合法；改 `mod_id` 后必须同步 `fabric.mod.json` 的 `id`、`ExampleMod.java` 的 `MOD_ID` 与所有 `Identifier` 注册名（见同档 `AGENTS.md:167`、`.cursor/rules/00-project-setup.mdc:197`）。

### 禁止在服务端引用客户端类

```java
// ❌ 错误：在 ExampleMod（服务端）中引用 MinecraftClient
public class ExampleMod implements ModInitializer {
    @Override
    public void onInitialize() {
        MinecraftClient client = MinecraftClient.getInstance();  // 崩溃！
    }
}

// ✅ 正确：客户端逻辑放在 ExampleModClient
public class ExampleModClient implements ClientModInitializer {
    @Override
    public void onInitializeClient() {
        MinecraftClient client = MinecraftClient.getInstance();  // 正确
    }
}
```

---

## 目录约定

| 目录 | 内容 |
|------|------|
| `src/main/java/` | 所有 Java 源码 |
| `src/main/resources/` | 所有资源文件 |
| `src/generated/resources/` | DataGen 生成的文件（自动创建，不要手动编辑）|
| `src/main/resources/assets/{modid}/` | 资源包内容（textures、models、lang 等）|
| `src/main/resources/data/{modid}/` | 数据包内容（recipes、loot_tables、tags 等）|

---

## 常用 Gradle 命令

```bash
# 首次构建（下载依赖，耗时较长）
./gradlew build

# 编译
./gradlew compileJava

# 启动客户端
./gradlew runClient

# 启动服务端
./gradlew runServer

# 启动数据生成器
./gradlew runDatagen

# 刷新映射后的源码（Mappings 变更后必需）
./gradlew clean genSources

# 生成 IDE 项目
./gradlew idea    # IntelliJ IDEA
./gradlew eclipse # Eclipse
```

---

## fabric.mod.json 关键字段

```json
{
  "schemaVersion": 1,
  "id": "${mod_id}",
  "version": "${version}",
  "name": "${mod_name}",
  "entrypoints": {
    "main": ["com.example.examplemod.ExampleMod"],
    "client": ["com.example.examplemod.ExampleModClient"]
  },
  "mixins": ["examplemod.mixins.json"],
  "depends": {
    "fabricloader": ">=${loader_version}",
    "fabric-api": "*",
    "minecraft": ">=${minecraft_version}",
    "java": ">=17"
  }
}
```

> **AI 注意**：`fabric.mod.json` 中的 `${mod_id}` 会在 Gradle 构建时替换为 `gradle.properties` 中的值。不要手动修改 `fabric.mod.json` 中的 `id`，修改 `gradle.properties` 即可。

> **`fabric.mod.json` 的 `environment` 字段**：Fabric 侧 `environment` 自 schemaVersion 1 起即支持（同档 `AGENTS.md:80`），本 scaffold 未写该字段 = 省略声明，不是「1.19+ 才有」。旧稿「1.18.x vs 1.18.x 差异 / 该字段从 1.19+ 开始支持」为误记，已改。
